@startuml Observer

' =========================
'  Style
' =========================

left to right direction

skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 150

skinparam DefaultFontName "Inter"
skinparam DefaultFontSize 12
skinparam classAttributeIconSize 0

skinparam class {
  BackgroundColor #F9F9F9
  BorderColor #BFBFBF
  FontColor #333333
}

skinparam Arrow {
  Color #9E9E9E
  Thickness 1
}

hide circle
hide empty members

' =========================
'  Classes
' =========================

class Engine <<Interface>>{
    +registerView(gv : GameView) : void
    +unregisterView(gv : GameView) : void
}

class GameView <<Inteface>> {
    +showGame() : void
    +pause() : void
    +menu() : void
    +openPowerUp() : void
    +pokedexView() : void
}

class GameViewImpl {

}

' =========================
'  Relations
' =========================

GameView --* Engine
GameView <|.. GameViewImpl

@enduml
